# persistent_cache

./: persistent_cache.py  pyproject.toml
tests/: test_persistent_cache.py
